# Skill-Based-Career-Prediction-and-Market-Insights

./: README.md  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js
_modules/: data_preprocessing.html  holland_code_model.html
_sources/: index.rst.txt  modules.rst.txt
notebooks/: DataVisualizationOccupation.ipynb  EmpStats_Team2.ipynb  data_preprocessing.py  draft1.ipynb  education_2019_5_4.xlsx  education_2023_5_4.xlsx  education_labor_stats.ipynb  employee_nonfarm_geoplot.ipynb  employees_across_sectors.py  employment_and_wage_change.py  holland-career-compass.ipynb  holland_code_model.py  job_recommendation.ipynb  labor-force.ipynb  occupation.ipynb  occupation_2019_1_7.xlsx  occupation_2023_1_2.xlsx  riasec-career-compass.ipynb  riasec-career-compass_fn_implementation.ipynb  skills_stats.ipynb  visualisation.py  work_trends_2029.py
notebooks/project_data/: Employee_NonfarmPayrolls.xlsx
notebooks/source/: conf.py  index.rst  notebook.rst
